force-app/main/default/objects/MetaWeather__c/MetaWeather__c.object-meta.xml
<CustomObject>
    <label>WeatherData</label>
    <nameField>
        <label>MetaWeather Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeatherDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>