force-app/main/default/objects/MetaWeather__c/fields/High_Temperature__c.field-meta.xml
<CustomField>
    <fullName>High_Temperature__c</fullName>
    <label>High Temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>