force-app/main/default/objects/MetaWeather__c/fields/Low_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Low_Temperature__c</fullName>
    <label>Low Temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>