force-app/main/default/objects/MetaWeather__c/fields/WOEID__c.field-meta.xml
<CustomField>
    <fullName>WOEID__c</fullName>
    <label>WOEID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>